<resources>
    <string name="app_name">Qurio</string>
    <string name="welcome_qurio_explorer">Welcome Qurio explorer</string>
    <string name="rika">Rika</string>
    <string name="games">Games</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="reward">reward</string>
    <string name="coin_stack_icon">Coin Stack Icon</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="skipped">Skipped</string>
    <string name="blur_background">blur background</string>
    <string name="ribbon_image">ribbon image</string>
    <string name="great_job">Great Job</string>
    <string name="star_icon">star icon</string>
    <string name="streak_icon">Streak Icon</string>
    <string name="every_day_count">Every day count!</string>
    <string name="_0_day_streak_start_make_a_series">0 day streak, start make a series</string>
    <string name="blur_image">blur image</string>
    <string name="welcome_to_the_world_of_qurio_where_questions_spark_curiosity_and_prizes_await_the_smartest_ready_to_begin_the_challenge">Welcome to the world of Qurio, where questions spark curiosity and prizes await the smartest. Ready to begin the challenge?</string>
    <string name="welcome_to_qurio">Welcome to Qurio</string>
    <string name="brain_image">Brain Image</string>
    <string name="swipe_up_to_play">Swipe up to PLAY!</string>
    <string name="play_now">PLAY NOW</string>
    <string name="submit">Submit</string>
    <string name="lives">Lives</string>
    <string name="points">Points</string>
    <string name="awards">Awards</string>
    <string name="no_connection">No Connection</string>
    <string name="check_your_internet">Oops! It looks like you’re offline. Please\ncheck your internet connection to continue\nplaying</string>
    <string name="retry">Retry</string>
    <string name="loading_game">Loading Game</string>
    <string name="challenge_and_win">Challenge and win</string>
    <string name="answer_quickly_earn_points_and_share_with_your_friends">Answer quickly, earn points, and share with your\n friends!\n Each trivia category is a new experience.</string>
    <string name="collect_them_all">Collect them all!</string>
    <string name="choose_your_character">Choose your character</string>
    <string name="unlock_characters_earn_badges_and_climb_the_leaderboards_qurio_is_fascinating_but_you_can_handle_it">Unlock characters, earn badges, and climb the leaderboards. Qurio is merciless, but you can handle it.</string>
    <string name="each_hero_has_their_own_unique_style_choose_from_unique_characters_and_start_your_adventure_in_your_own_style">Each hero has their own unique style! Choose from unique characters and start your adventure in your own style.</string>
    <string name="locked_icon">locked icon</string>
    <string name="coin_icon">coin icon</string>
    <string name="correct_icon">correct icon</string>
    <string name="character_image">character image</string>
    <string name="buy_life">Buy life</string>
    <string name="last_games">Last Games</string>
    <string name="select_character" />
    <string name="character">Character</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="buy">Buy</string>
    <string name="x">X</string>
    <string name="equal">=</string>
    <string name="science_natural">Science and Natural</string>
    <string name="_1m_33sec">1m 33sec</string>
    <string name="_0">0</string>
    <string name="_230">230</string>
    <string name="settings">Settings</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="save_changes">Save Changes</string>
    <string name="discard">Discard</string>
    <string name="check">Check</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="play_again">Play again</string>
    <string name="back_to_home">Back to home</string>
    <string name="achievment_image" translatable="false">achievment_image</string>
    <string name="achievements" translatable="false">Achievements</string>
    <string name="click_on_achievement_to_view_details" translatable="false">*Click on achievement to view details</string>
    <string name="collector" translatable="false">Collector\n</string>
    <string name="share_with_friends" translatable="false">Share with friends</string>
    <string name="achievement_image" translatable="false">achievement image\n</string>
    <string name="difficulty_level">Difficulty level</string>
    <string name="_1">1</string>
    <string name="_200_x">200 X</string>
    <string name="achievement" translatable="false">achievement</string>
</resources>