<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        >

        <com.google.android.material.chip.Chip
            style="@style/ChipStyle"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            app:chipTextColor="@color/chip_text_color"
            android:checked="false"
            app:chipMinTouchTargetSize="0dp"
            android:text="@string/easy" />

        <com.google.android.material.chip.Chip
            style="@style/ChipStyle"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            app:chipTextColor="@color/chip_text_color"
            android:checked="true"
            app:chipMinTouchTargetSize="0dp"
            android:text="@string/medium" />

        <com.google.android.material.chip.Chip
            style="@style/ChipStyle"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:checked="false"
            app:chipMinTouchTargetSize="0dp"
            app:chipTextColor="@color/chip_text_color"
            android:text="@string/hard" />

    </com.google.android.material.chip.ChipGroup>
</androidx.constraintlayout.widget.ConstraintLayout>