<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools">

    <data>
        <variable
            name="character"
            type="com.barcelona.qurio.presentation.model.CharacterGame" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/blur_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#B3000000"
            android:clickable="true"
            android:focusable="true"
            android:visibility="visible" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.barcelona.qurio.presentation.custom_view.Dialog
                android:id="@+id/dialog_root"
                android:layout_width="wrap_content"
                android:layout_height="273dp"
                android:layout_marginHorizontal="16dp"
                app:dialogTitle="@string/character"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="237dp"
                    android:layout_height="71dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="24dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/character_image"
                            android:layout_width="48dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="12dp"
                            android:contentDescription="@string/character_image"
                            android:src="@{character.lockedImage}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tool:src="@drawable/mika_without_background" />

                        <ImageView
                            android:id="@+id/lock_icon"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:contentDescription="@string/locked_icon"
                            android:src="@drawable/ic_lock"
                            android:visibility="visible" />
                    </FrameLayout>

                    <TextView
                        style="@style/HeadLine.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:text="@string/equal"
                        android:textColor="@color/on_primary" />

                    <TextView
                        android:id="@+id/character_price"
                        style="@style/HeadLine.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text='@{String.valueOf(character.price)}'
                        android:textColor="@color/on_primary"
                        tool:text="300" />

                    <TextView
                        style="@style/HeadLine.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:text="@string/x"
                        android:textColor="@color/on_primary" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/coin_icon"
                        android:src="@drawable/coin_stack" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="horizontal"
                    android:paddingHorizontal="12dp"
                    android:paddingBottom="36dp">

                    <com.barcelona.qurio.presentation.custom_view.PrimaryButton
                        android:id="@+id/buy_confirm_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:text="@string/buy" />

                    <com.barcelona.qurio.presentation.custom_view.SecondaryButton
                        android:id="@+id/buy_cancel_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_weight="1"
                        app:secondaryText="@string/cancel" />

                </LinearLayout>
            </com.barcelona.qurio.presentation.custom_view.Dialog>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>
</layout>
