<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/achievement_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.barcelona.qurio.presentation.custom_view.Dialog
            android:id="@+id/dialog_container"
            android:layout_width="match_parent"
            android:layout_height="470dp"
            android:layout_marginHorizontal="16dp"
            app:dialogTitle="@string/achievements"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.498">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/achievements_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:paddingHorizontal="12dp"
                android:layout_gravity="center_horizontal"
                tools:itemCount="3"
                tools:listitem="@layout/achievement_item"
                />

            <TextView
                style="@style/Body.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:layout_marginTop="100dp"
                android:textColor="@color/shade_secondary"
                android:text="@string/click_on_achievement_to_view_details" />

            <com.barcelona.qurio.presentation.custom_view.SecondaryButton
                android:id="@+id/ok_button"
                app:secondaryText="@string/ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="36dp"
                />

        </com.barcelona.qurio.presentation.custom_view.Dialog>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>