<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_settings_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/blur_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#B3000000"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible" />

    <com.barcelona.qurio.presentation.custom_view.Dialog
        android:id="@+id/dialog_root"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:dialogTitle="@string/settings">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/icon_sound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_sound"
                    app:layout_constraintBottom_toBottomOf="@id/sound_slider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/sound_slider" />

                <TextView
                    android:id="@+id/text_sound"
                    style="@style/Body.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/sound"
                    android:textColor="@color/shade_secondary"
                    app:layout_constraintBottom_toBottomOf="@id/sound_slider"
                    app:layout_constraintStart_toEndOf="@id/icon_sound"
                    app:layout_constraintTop_toTopOf="@id/sound_slider" />

                <com.barcelona.qurio.presentation.custom_view.VolumeSlider
                    android:id="@+id/sound_slider"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toTopOf="@id/music_slider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/text_sound"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/icon_music"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_music"
                    app:layout_constraintBottom_toBottomOf="@id/music_slider"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/music_slider" />

                <TextView
                    android:id="@+id/text_music"
                    style="@style/Body.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/music"
                    android:textColor="@color/shade_secondary"
                    app:layout_constraintBottom_toBottomOf="@id/music_slider"
                    app:layout_constraintStart_toEndOf="@id/icon_music"
                    app:layout_constraintTop_toTopOf="@id/music_slider" />

                <com.barcelona.qurio.presentation.custom_view.VolumeSlider
                    android:id="@+id/music_slider"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="26dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/sound_slider"
                    app:layout_constraintTop_toBottomOf="@id/sound_slider" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="1dp"
                    android:layout_height="3dp"
                    android:background="@color/primary" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/primary_variant" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="3dp"
                    android:background="@color/primary" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.barcelona.qurio.presentation.custom_view.PrimaryButton
                    android:id="@+id/save_changes_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    app:primaryText="@string/save_changes" />

                <com.barcelona.qurio.presentation.custom_view.SecondaryButton
                    android:id="@+id/discard_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:secondaryText="@string/discard" />
            </LinearLayout>
        </LinearLayout>
    </com.barcelona.qurio.presentation.custom_view.Dialog>
</FrameLayout>